...
    <string name="fastScrollList_upButton_text">Topo</string>

    <!-- Fields -->
    <string name="cepTextField_component_testTag">AppTextFieldComponent</string>
    <string name="cepTextField_inputCounter_testTag">AppTextFieldInputCounter</string>
    <string name="cepSearchField_clearTrailingIcon">Limpar campo cep</string>
    <string name="cepSearchField_component_testTag">SearchCepFieldComponent</string>
    <string name="cepSearchField_hint">Digite o CEP</string>
    <string name="cepSearchField_label">CEP</string>

    <!-- Filters -->
    <string name="cepFilter_component_testTag">CepFilterComponent</string>
    <string name="cepFilter_filterButton_testTag">CepFilterSearchButton</string>
    <string name="cepFilter_filterButton_label">Filtrar</string>
    <string name="dateFilter_component_testTag">SingleDateFilterComposable</string>
    <string name="dateFilter_startDateField_testTag">SingleDateFilterField</string>
    <string name="dateFilter_filterButton_testTag">SingleDateFilterButton</string>
    <string name="dateFilter_filterButton_label">Filtrar</string>
    <string name="logFilterChip_component_testTag">LogFilterChipComponentTestTag</string>
    <string name="periodFilter_composable_testTag">PeriodFilterComposable</string>
    <string name="periodFilter_startDateField_label">De</string>
    <string name="periodFilter_startDateField_testTag">PeriodFilterStartDateField</string>
    <string name="periodFilter_endDateField_label">Até</string>
    <string name="periodFilter_endDateField_supportText">A data inicial deve ser menor que a final</string>
    <string name="periodFilter_endDateField_testTag">PeriodFilterEndDateField</string>
    <string name="periodFilter_filterButton_label">Filtrar</string>
    <string name="periodFilter_filterButton_testTag">PeriodFilterButton</string>
    <string name="placeFilter_component_testTag">PlaceFilterComponent</string>
    <string name="placeFilterChip_leadingIcon_description">Filtro %1$s selecionado</string>
    <string name="titleFilter_component_testTag">TitleFilterComposable</string>
    <string name="titleFilter_filterButton_label">Filtrar</string>
    <string name="titleFilter_filterButton_testTag">TitleFilterButton</string>
    <string name="titleFilter_titleField_label">Título</string>
    <string name="titleFilter_titleField_testTag">TitleFilterField</string>

    <!-- Header -->
    <string name="header_component_testTag">HeaderComponent</string>
    <string name="header_title_label">Header</string>
    <string name="header_mockMenu_description">Menu</string>
    <string name="headerContent_iconButton_testTag">IconHeader</string>
...
    <string name="noteList_component_testTag">NoteListComponentTestTag</string>
    <string name="noteListComponent_component_testTag">NoteListComponentComponentTestTag</string>
    <string name="noteListMenu_addNoteButton_testTag">NoteListMenuAddNoteButtonTag</string>
    <string name="noteListMenu_component_testTag">NoteListMenuComponent</string>
    <string name="noteListMenu_horizontalDivider_testTag">NoteListMenuHorizontalDivider</string>
    <string name="noteListMenu_noteAdd_description">Botão adicionar anotação</string>
    <string name="noteListVisibility_component_testTag">NoteListVisibilityComponent</string>
    <string name="noteListVisibility_hideIcon_description">Ícone de esconder anotações</string>
    <string name="noteListVisibility_hideList_Text">Esconder anotações</string>
    <string name="noteListVisibility_showIcon_description">Ícone de mostra anotações</string>
    <string name="noteListVisibility_showList_Text">Mostrar anotações</string>

    <!-- Favorite Detail Pane component -->
    <string name="favoriteChangeAlert_component_testTag">FavoriteChangeAlertComponent</string>
    <string name="favoriteChangeAlert_message_text">O CEP %1$s será removido da lista dos favoritos e perderá suas notas, mas ainda permanecerá em cache. Desejas prosseguir?</string>
    <string name="favoriteDetailPaneComponent_header_label">Endereço</string>
    <string name="favoriteExport_component_testTag">FavoriteExportComponentTestTag</string>
...
    <string name="favoriteImport_title_text">Importar</string>
    <string name="favoriteItem_component_testTag">FavoriteItemComponentTag %1$s</string>
    <string name="favoriteTab_addressTab_label">Endereço</string>
    <string name="favoriteTab_addressTab_description">Aba de endereço</string>
    <string name="favoriteTab_noteTab_label">Anotações</string>
    <string name="favoriteTab_noteTab_description">Aba de anotações</string>
    <string name="noteContentField_component_testTag">NoteContentFieldComponentTestTag</string>
    <string name="noteContentField_nameField_text">Anotação</string>
    <string name="noteForms_component_testTag">NoteFormsComponentTestTag</string>
    <string name="noteFormsButton_component_testTag">NoteFormsButtonComponentTestTag</string>
    <string name="noteFormsButton_saveButton_text">Criar</string>
    <string name="noteFormsButton_saveButton_description">Botão para criar nota</string>
    <string name="noteFormsButton_updateButton_text">Atualizar</string>
    <string name="noteFormsButton_updateButton_description">Botão para atualizar nota</string>
    <string name="noteTitleField_component_testTag">NoteTitleFieldComponentTestTag</string>
    <string name="noteTitleField_nameField_text">Título</string>
    <string name="noteTitleField_nameField_errorMsg">O título deve conter entre %1$s e %2$s caracteres</string>

    <!-- Log List Pane component -->
    <string name="logElement_component_testTag">LogElementComponentTestTag %1$s</string>
    <string name="logElement_deleteButton_testTag">LogElementContentDeleteButtonTestTag</string>
...
    <string name="logElementContent_timestampField_description">Cep pesquisado em %1$s</string>
    <string name="logElementContent_cepField_label">CEP: %1$s</string>
    <string name="logElementContent_component_testTag">LogElementContentComponentTestTag %1$s</string>
    <string name="logFilterChip_filterSelected_description">Filtro %1$s selecionado</string>
    <string name="logFilterComponent_component_testTag">LogFilterComposable</string>
    <string name="logFilterComponent_initialDate_label">De</string>
    <string name="logFilterComponent_initialDate_testTag">LogFilterComponentInitialDateTestTag</string>
    <string name="logFilterComponent_finalDate_label">Até</string>
    <string name="logFilterComponent_finalDate_testTag">LogFilterComponentFinalDateTestTag</string>
    <string name="logFilterList_component_testTag">LogFilterListComponentTestTag</string>
    <string name="logList_component_testTag">LogListComponentTestTag</string>
    <string name="logListPaneComponent_header_testTag">LogScreenHeader</string>
    <string name="logListPaneComponent_header_title">Histórico</string>
    <string name="logListPaneOnFailure_component_testTag">LogScreenOnFailure</string>
    <string name="logListPaneOnLoading_component_testTag">LogScreenOnLoading</string>
...
